--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cross-reference-navigation",
+  "name": "obsidian-tag-navigator",
   "version": "0.1.0",
-  "description": "Cross-reference navigation through your tags",
+  "description": "Tag Navigator plugin for Obsidian: Cross-reference navigation through your tags",
   "author": "alexobenauer",
   "main": "main.js",
   "license": "MIT",
